syntax = "proto3";

option csharp_namespace = "client";

package greet;

message PrimeNumber {
  int64 Id = 1;
  int64 Timestamp = 2;
  int64 Number = 3;
}

message PrimeNumberResponse {
  bool IsPrime = 1;
}

service Primes {
  rpc IsPrime (PrimeNumber) returns (PrimeNumberResponse);
}
